--- a/config.toml
+++ b/config.toml
@@ -1,180 +1,143 @@
 # The URL the site will be built for
-base_url = "http://linuxgroot.net"
-
-# The site title and description; used in feeds by default.
+base_url = "https://linuxgroot.net"
 title = "LinuxGroot"
 description = "Ray's Website"
 
-# The default language; used in feeds.
-default_language = "en"
-
 # The site theme to use.
-#theme = ""
+theme = "adidoks"
 
-# For overriding the default output directory `public`, set it to another value (e.g.: "docs")
-#output_dir = "public"
-
-# Whether dotfiles at the root level of the output directory are preserved when (re)building the site.
-# Enabling this also prevents the deletion of the output folder itself on rebuilds.
-#preserve_dotfiles_in_output = false
+# The default language; used in feeds and search index
+# Note: the search index doesn't support Chinese/Japanese/Korean Languages
+default_language = "en"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+# Whether to generate a feed file for the site
+generate_feed = true
+
 # When set to "true", the generated HTML files are minified.
 minify_html = false
 
-# A list of glob patterns specifying asset files to ignore when the content
-# directory is processed. Defaults to none, which means that all asset files are
-# copied over to the `public` directory.
-# Example:
-#     ignored_content = ["*.{graphml,xlsx}", "temp.*", "**/build_folder"]
-ignored_content = []
-
-# When set to "true", a feed is automatically generated.
-generate_feed = false
-
-# The filename to use for the feed. Used as the template filename, too.
-# Defaults to "atom.xml", which has a built-in template that renders an Atom 1.0 feed.
-# There is also a built-in template "rss.xml" that renders an RSS 2.0 feed.
-feed_filename = "atom.xml"
-
-# The number of articles to include in the feed. All items are included if
-# this limit is not set (the default).
-# feed_limit = 20
-
-# When set to "true", files in the `static` directory are hard-linked. Useful for large
-# static files. Note that for this to work, both `static` and the
-# output directory need to be on the same filesystem. Note that the theme's `static`
-# files are always copied, regardless of this setting.
-hard_link_static = false
-
-# The taxonomies to be rendered for the site and their configuration of the default languages
-# Example:
-#     taxonomies = [
-#       {name = "tags", feed = true}, # each tag will have its own feed
-#       {name = "tags"}, # you can have taxonomies with the same name in multiple languages
-#       {name = "categories", paginate_by = 5},  # 5 items per page for a term
-#       {name = "authors"}, # Basic definition: no feed or pagination
-#     ]
-#
-taxonomies = []
+# The taxonomies to be rendered for the site and their configuration.
+taxonomies = [
+  {name = "authors"}, # Basic definition: no feed or pagination
+]
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = false
-
-[markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
-
-# A list of directories used to search for additional `.sublime-syntax` and `.tmTheme` files.
-extra_syntaxes_and_themes = []
-
-# The theme to use for code highlighting.
-# See below for list of allowed values.
-# https://www.getzola.org/documentation/getting-started/configuration/#syntax-highlighting
-highlight_theme = "base16-ocean-dark"
-
-# When set to "true", emoji aliases translated to their corresponding
-# Unicode emoji equivalent in the rendered Markdown files. (e.g.: :smile: => 😄)
-render_emoji = true
-
-# Whether external links are to be opened in a new tab
-# If this is true, a `rel="noopener"` will always automatically be added for security reasons
-external_links_target_blank = false
-
-# Whether to set rel="nofollow" for all external links
-external_links_no_follow = false
-
-# Whether to set rel="noreferrer" for all external links
-external_links_no_referrer = false
-
-# Whether smart punctuation is enabled (changing quotes, dashes, dots in their typographic form)
-# For example, `...` into `…`, `"quote"` into `“curly”` etc
-smart_punctuation = false
-
-# Configuration of the link checker.
-[link_checker]
-# Skip link checking for external URLs that start with these prefixes
-skip_prefixes = [
-    "http://[2001:db8::]/",
-]
-
-# Skip anchor checking for external URLs that start with these prefixes
-skip_anchor_prefixes = [
-    "https://caniuse.com/",
-]
-
-# Treat internal link problems as either "error" or "warn", default is "error"
-internal_level = "error"
-
-# Treat external link problems as either "error" or "warn", default is "error"
-external_level = "error"
-
-# Various slugification strategies, see below for details
-# Defaults to everything being a slug
-[slugify]
-paths = "on"
-taxonomies = "on"
-anchors = "on"
-# Whether to remove date prefixes for page path slugs.
-# For example, content/posts/2016-10-08_a-post-with-dates.md => posts/a-post-with-dates
-# When true, content/posts/2016-10-08_a-post-with-dates.md => posts/2016-10-08-a-post-with-dates
-paths_keep_dates = false
+# When set to "true", a search index is built from the pages and section
+# content for `default_language`.
+build_search_index = true
 
 [search]
 # Whether to include the title of the page/section in the index
 include_title = true
 # Whether to include the description of the page/section in the index
 include_description = false
-# Whether to include the path of the page/section in the index
-include_path = false
 # Whether to include the rendered content of the page/section in the index
 include_content = true
-# At which character to truncate the content to. Useful if you have a lot of pages and the index would
-# become too big to load on the site. Defaults to not being set.
-# truncate_content_length = 100
 
-# Wether to produce the search index as a javascript file or as a JSON file
-# Accepted value "elasticlunr_javascript" or "elasticlunr_json"
-index_format = "elasticlunr_javascript"
+[markdown]
+# Whether to do syntax highlighting.
+# Theme can be customised by setting the `highlight_theme`
+# variable to a theme supported by Zola
+highlight_code = true
 
-# Optional translation object for the default language
-# Example:
-#     default_language = "fr"
-#
-#     [translations]
-#     title = "Un titre"
-#
-[translations]
-
-# Additional languages definition
-# You can define language specific config values and translations:
-# title, description, generate_feed, feed_filename, taxonomies, build_search_index
-# as well as its own search configuration and translations (see above for details on those)
-[languages]
-# For example
-# [languages.fr]
-# title = "Mon blog"
-# generate_feed = true
-# taxonomies = [
-#    {name = "auteurs"},
-#    {name = "tags"},
-# ]
-# build_search_index = false
-[languages.he]
-title = "רעי ב"
-description = "האתר של רעי"
-
-
-# You can put any kind of data here. The data
-# will be accessible in all templates
-# Example:
-#     [extra]
-#     author = "Famous author"
-#
-# author value will be available using {{ config.extra.author }} in templates
-#
 [extra]
 # Put all your custom variables here
+author = "Aaran Xu"
+github = "https://github.com/aaranxu"
+twitter = "https://twitter.com/aaranxu"
+email = "aaranxu@outlook.com"
+
+# If running on netlify.app site, set to true
+is_netlify = true
+
+# Set HTML file language
+language_code = "en-US"
+
+# Set theme-color meta tag for Chrome browser
+theme_color = "#fff"
+
+# More about site's title
+title_separator = "|"  # set as |, -, _, etc
+title_addition = "Modern Documentation Theme"
+
+
+# Set date format in blog publish metadata
+timeformat = "%B %e, %Y" # e.g. June 14, 2021
+timezone = "America/New_York"
+
+# Edit page on reposity or not
+edit_page = false
+docs_repo = "https://github.com/aaranxu/adidoks"
+repo_branch = "main"
+
+## Math settings
+# options: true, false. Enable math support globally,
+# default: false. You can always enable math on a per page.
+math = false
+library = "katex"  # options: "katex", "mathjax". default is "katex".
+
+## Open Graph + Twitter Cards
+[extra.open]
+enable = true
+# this image will be used as fallback if a page has no image of its own
+image = "doks.png"
+twitter_site = "aaranxu"
+twitter_creator = "aaranxu"
+facebook_author = "ichunyun"
+facebook_publisher = "ichunyun"
+og_locale = "en_US"
+
+## JSON-LD
+[extra.schema]
+type = "Organization"
+logo = "logo-doks.png"
+twitter = "https://twitter.com/aaranxu"
+linked_in = ""
+github = "https://github.com/aaranxu"
+section = "blog" # see config.extra.main~url
+## Sitelinks Search Box
+site_links_search_box = false
+
+
+# Menu items
+[[extra.menu.main]]
+name = "Docs"
+section = "docs"
+url = "/docs/getting-started/introduction/"
+weight = 10
+
+[[extra.menu.main]]
+name = "Blog"
+section = "blog"
+url = "/blog/"
+weight = 20
+
+[[extra.menu.social]]
+name = "Twitter"
+pre = '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>'
+url = "https://twitter.com/aaranxu"
+weight = 10
+
+[[extra.menu.social]]
+name = "GitHub"
+pre = '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>'
+url = "https://github.com/aaranxu/adidoks"
+post = "v0.1.0"
+weight = 20
+
+# Footer contents
+[extra.footer]
+info = 'Powered by <a href="https://www.netlify.com/">Netlify</a>, <a href="https://www.getzola.org/">Zola</a>, and <a href="https://github.com/aaranxu/adidoks">AdiDoks</a>'
+
+[[extra.footer.nav]]
+name = "Privacy"
+url = "/privacy-policy/"
+weight = 10
+
+[[extra.footer.nav]]
+name = "Code of Conduct"
+url = "/docs/contributing/code-of-conduct/"
+weight = 20
